# gmail_notion

./: pyproject.toml
gmail_notion/: config.json  script.py
